Updates - More HTML and CSS stuff

--- a/index.html
+++ b/index.html
@@ -4,9 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>My Portfolio</h1>
+    <section id="navigation" class="position-absolute">
+        <div class="flex-area auto-size">
+            <ul id="nav-menu">
+                <div class="nav-item">About Me</div>
+                <div class="nav-item">Skills</div>
+                <div class="nav-item">Project</div>
+                <div class="nav-item">Contact</div>
+            </ul>
+        </div>
+    </section>
+
+    <section id="main" class="position-absolute">
+        <div id="about-div" class="entries">
+            <h1 class="auto-size">Welcome, my name is Aranvihn Clark.</h1>
+            <p class="auto-size"><br>
+                I am a fullstack developer and I live in Brighton, MI, US. I am a proud member of the LGBTQ community and am married to a wonderful husband. I have always had a passion for software development and enjoy sharing my skills.
+            </p>
+            <p class="auto-size"><br>
+                I am currently participating in a Bright Paths cohort. I am an advocate of learning each day, for if you live a day without learning anything, have you truly lived that day? Even if it is something I already know, I am willing to listen to deepen my understanding of it.
+            </p>
+        </div>
+        <div id="skills-div" class="entries">
+            <h1 class="auto-size">Technical Skills</h1>
+            <p class="auto-size">HTML/CSS</p>
+            <p class="auto-size">JavaScript</p>
+            <p class="auto-size">PostgreSQL</p>
+        </div>
+        <div id="projects-div" class="entries">
+            <h1 class="auto-size">Projects</h1>
+            <p class="auto-size "><a href="https://github.com/AranvihnClark/Foundations_Capstone">Joe The Guard</a><br><br>
+                An interactive click RPG where you live out a single day as Joe, the guard. Act as the sole defender against criminals entering the Kingdom of Gloria.
+            </p>
+        </div>
+        <div id="contact-div" class="entries">
+            <h1 class="auto-size">Where to find me?<br><br></h1>
+            <p class="auto-size"><a href="linkedin.com/in/aranvihnclark">LinkedIn</a></p>
+            <p class="auto-size"><a href="https://github.com/AranvihnClark">GitHub</a></p>
+        </div>
+    </section>
+
+    <section id="animated-bg">
+        <div id="sun-light"></div>
+        <div id="tree" class="position-absolute">
+            <img src="/images/tree.png">
+        </div>
+        <div class="set set1">
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+        </div>
+        <div class="set set2">
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+        </div>
+        <div class="set set3">
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+        </div>
+        <div class="set set4">
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div"><img src="/images/petal.png"></div>
+        </div>
+        <div class="set set5">
+          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div"><img src="../images/petal.png"></div>
+        </div>
+      </section>
+      <script src="main.js"></script>
 </body>
 </html>
