Update - Nav menu css complete

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <section id="navigation" class="position-absolute">
-        <div class="flex-area auto-size">
+        <div id="nav-div" class="flex-area auto-size">
             <ul id="nav-menu">
-                <div class="nav-item">About Me</div>
-                <div class="nav-item">Skills</div>
-                <div class="nav-item">Project</div>
-                <div class="nav-item">Contact</div>
+                <div class="nav-item"><a href="#" class="nav-links">About</a></a></div>
+                <div class="nav-item"><a href="#" class="nav-links">Skills</a></div>
+                <div class="nav-item"><a href="#" class="nav-links">Project</a></div>
+                <div class="nav-item"><a href="#" class="nav-links">Contact</a></div>
             </ul>
         </div>
     </section>
 
     <section id="main" class="position-absolute">
         <div id="about-div" class="entries">
-            <h1 class="auto-size">Welcome, my name is Aranvihn Clark.</h1>
+            <h1 class="auto-size">Welcome, my name is Aranvihn Clark</h1>
             <p class="auto-size"><br>
                 I am a fullstack developer and I live in Brighton, MI, US. I am a proud member of the LGBTQ community and am married to a wonderful husband. I have always had a passion for software development and enjoy sharing my skills.
             </p>
@@ -42,7 +42,7 @@
             </p>
         </div>
         <div id="contact-div" class="entries">
-            <h1 class="auto-size">Where to find me?<br><br></h1>
+            <h1 class="auto-size">Where to find me<br><br></h1>
             <p class="auto-size"><a href="linkedin.com/in/aranvihnclark">LinkedIn</a></p>
             <p class="auto-size"><a href="https://github.com/AranvihnClark">GitHub</a></p>
         </div>
