Update - Completed Page, added more petals

--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="navigation" class="position-absolute">
+    <section id="navigation">
         <div id="nav-div" class="flex-area auto-size">
             <ul id="nav-menu">
-                <div class="nav-item"><a href="#" class="nav-links">About</a></a></div>
-                <div class="nav-item"><a href="#" class="nav-links">Skills</a></div>
-                <div class="nav-item"><a href="#" class="nav-links">Project</a></div>
-                <div class="nav-item"><a href="#" class="nav-links">Contact</a></div>
+                <div class="nav-item">
+                    <a href="#about-div" class="nav-links">About</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#skills-div" class="nav-links">Skills</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#projects-div" class="nav-links">Project</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#contact-div" class="nav-links">Contact</a>
+                </div>
             </ul>
         </div>
     </section>
 
-    <section id="main" class="position-absolute">
+    <section id="main" >
         <div id="about-div" class="entries">
             <h1 class="auto-size">Welcome, my name is Aranvihn Clark</h1>
             <p class="auto-size"><br>
@@ -54,54 +62,104 @@
             <img src="/images/tree.png">
         </div>
         <div class="set set1">
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
         </div>
         <div class="set set2">
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
         </div>
         <div class="set set3">
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
         </div>
         <div class="set set4">
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
-          <div class="image-div"><img src="/images/petal.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
         </div>
         <div class="set set5">
-          <div class="image-div"><img src="../images/petal.png"></div>
-          <div class="image-div"><img src="../images/petal.png"></div>
-          <div class="image-div"><img src="../images/petal.png"></div>
-          <div class="image-div"><img src="../images/petal.png"></div>
-          <div class="image-div"><img src="../images/petal.png"></div>
-          <div class="image-div"><img src="../images/petal.png"></div>
-          <div class="image-div"><img src="../images/petal.png"></div>
-          <div class="image-div"><img src="../images/petal.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
+          <div class="image-div1"><img src="/images/petal1.png"></div>
+          <div class="image-div1"><img src="/images/petal2.png"></div>
+          <div class="image-div1"><img src="/images/petal3.png"></div>
+          <div class="image-div1"><img src="/images/petal4.png"></div>
+        </div>
+        <div class="set set1">
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+        </div>
+        <div class="set set2">
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+        </div>
+        <div class="set set3">
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+        </div>
+        <div class="set set4">
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+        </div>
+        <div class="set set5">
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
+          <div class="image-div2"><img src="/images/petal1.png"></div>
+          <div class="image-div2"><img src="/images/petal2.png"></div>
+          <div class="image-div2"><img src="/images/petal3.png"></div>
+          <div class="image-div2"><img src="/images/petal4.png"></div>
         </div>
       </section>
       <script src="main.js"></script>
